--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,10 +64,12 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp")
     implementation("com.squareup.okhttp3:logging-interceptor")
 
-
     //kotlin serialization
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:1.0.0'
+
+    //indicator
+    implementation "com.tbuonomo:dotsindicator:5.0"
 
 
 }
